--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <span class="logo">Programming Cat</span>
           </a>                 
           <div class="nav">
-            <a href="#" class="nav-link">Home</a>
-            <a href="#" class="nav-link" id="cat">Gato
+            <a href="index.html" class="nav-link">Home</a>
+            <a  class="nav-link" id="cat">Cat
                 <audio class= "input" id="cat-miau" loop >
                     <source type="audio/mp4" src="./sound/shari_meow-47485.mp3">
                   </audio>
             </a>
-            <a href="#" class="nav-link">More</a>
+            <a href="https://www.youtube.com/watch?v=lZqqMtW87hU" class="nav-link">More</a>
           </div>
         </header>
         <div class="content">
